# fast_api_pet

./: pyproject.toml  run.sh
app/: main.py  schemas.py
