[tool.poetry]
name = "fast_api_pet_project"
version = "0.1.0"
description = ""
authors = ["andrei <tricar5@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
pydantic = "^1.9.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
